# ThomasAlgorithm

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cilk_version.cpp  main.cpp  main_cilk.cpp  main_gen_matrix.cpp  main_openmp.cpp  main_seq.cpp  main_spline.cpp  main_tbb.cpp  openmp_version.cpp  seq_version.cpp  tbb_version.cpp
src/MatrixGeneration/: CMakeLists.txt  main_gen_matrix.cpp
src/Spline/: CMakeLists.txt  main_spline.cpp
src/Version_Cilk/: CMakeLists.txt  main_cilk.cpp
src/Version_OpenMP/: CMakeLists.txt  main_openmp.cpp
src/Version_Sequential/: CMakeLists.txt  main_seq.cpp
src/Version_TBB/: CMakeLists.txt  main_tbb.cpp
test/: run.py
